--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 body {
 font-family: Verdana, Arial, "Trebuchet MS", Sans-Serif, Georgia, Courier, "Times New Roman", Serif;
-font-size: 12px; 
+font-size: 12px;
 background: #dfdfdf;
-color: #333; 
-margin:0; 
+color: #333;
+margin:0;
 padding:0;
 line-height: 135%;
 }
@@ -13,18 +13,21 @@ line-height: 135%;
 a { color: #336699; text-decoration: none; }
 a:hover { text-decoration: none; color : #880000; }
 
-img { border: none; padding: 6px; } 
-img a {border:none;} 
+img { border: none; padding: 6px; }
+img a {border:none;}
 
 ul { list-style-type: none; }
-
+.plot{
+  width: 700px;
+  height: 300px;
+}
 #page {
 width: 780px;
 margin: 0 auto;
 background: #fff;
 }
 
-#header { 
+#header {
 height: 90px;
 }
 #header h1 {
@@ -97,7 +100,7 @@ margin: 0 auto;
 font-weight: 100;
 font-size: 12px;
 text-align: center;
-color #fff;	
+color #fff;
 height: 50px;
 line-height: 50px;
 }
@@ -108,7 +111,7 @@ line-height: 50px;
 #content h2 {
 font-weight: 100;
 font-size: 23px;
-margin: 0 0 4px; padding: 0 0 3px; 
+margin: 0 0 4px; padding: 0 0 3px;
 color: #999;
 }
 
@@ -121,14 +124,14 @@ list-style-type: square;
 }
 
 #content table {
-margin-top: -8px; 
+margin-top: -8px;
 margin-left: -8px;
 padding: 15px;
 }
 
 #content table td {
 valign: top;
-margin-top: -8px; 
+margin-top: -8px;
 margin-left: -8px;
 padding: 12px;
 }
@@ -136,7 +139,7 @@ padding: 12px;
 #date {
 color: #336699;
 font-style:italic;
-font-size: 10px; 
+font-size: 10px;
 }
 .important {
 font-weight:bold;
@@ -144,7 +147,7 @@ font-weight:bold;
 
 #sidebar img { padding: 0; margin: 0; }
 #sidebar ul {
-    list-style-type: none; 
+    list-style-type: none;
 }
 
 #sidebar h2 {
@@ -152,7 +155,7 @@ font-weight:bold;
     line-height: 50px;
     font-weight: 600;
     font-size: 14px;
-    margin: 20px 0 0 0; padding: 0 0 0 20px; 
+    margin: 20px 0 0 0; padding: 0 0 0 20px;
     color: #111;
 }
 
@@ -169,4 +172,3 @@ padding: 10px 0 5px 20px;
     padding: 2px 0 2px 22px;
 }
 #sidebar ul li a { font-size: 13px; }
-
